--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "lucide-react": "^0.475.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-easy-crop": "^5.5.6",
         "react-leaflet": "^5.0.0",
         "recharts": "^3.7.0",
         "tailwind-merge": "^3.0.1",
